# gb_remote

./: .gitattributes  .gitignore  AGENTS.md  README.md  README.md''
UI/eez_dual_throttle/: eezproject.eez-project  eezproject.eez-project-ui-state
UI/eez_lite/: eezproject.eez-project  eezproject.eez-project-ui-state
eez_dual_throttle/: eezproject.eez-project  eezproject.eez-project-ui-state
eez_lite/: eezproject.eez-project  eezproject.eez-project-ui-state
firmware/: .gitignore  .gitignore''  USB_SERIAL_PROTOCOL.md  build_and_release.sh  dual_throttle_build.sh  flash_windows.bat  flash_wsl.sh  gb_engineering_website  gb_receiver  lite_build.sh  read_coredump.sh  remove_macos_cruft.sh  sdkconfig  sdkconfig''  sdkconfig.defaults  sdkconfig.defaults.dual_throttle  sdkconfig.defaults.lite
firmware/main/: CMakeLists.txt  app_init.c  app_init.h  battery.c  battery.h  ble.c  ble.h  button.c  button.h  hw_config.h  lcd.c  lcd.h  lv_conf.h  main.c  power.c  power.h  viber.c  (+19 more)
githooks/: post-commit  pre-commit
mechanics/: back.stl  display_cover.stl  front.stl  power_button.stl  retreat.stl  throttle.stl
remote firmware/ble_spp_client/main/ui/: CMakeLists.txt  ui.h  ui_helpers.c  ui_themes.c  ui_themes.h
remote firmware/ble_spp_client/main/ui/fonts/: ui_font_bebas15.c  ui_font_bebas20.c  ui_font_bebas25.c  ui_font_bebas35.c  ui_font_bebas_medium.c
remote firmware/ble_spp_client/main/ui/images/: ui_img_33_connection_png.c  ui_img_battery_icon_png.c  ui_img_full_connection_png.c
remote firmware/ble_spp_client/main/ui/screens/: ui_home_screen.c  ui_splash_screen.c
(+91 files in other folders)
